--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -40,7 +40,7 @@
     <!-- TOP HEADER BAR -->
     <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
         <!-- Title -->
-        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">IBRAIN</a>
+        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">IBRAIN · EEG Reviewer</a>
         <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <a>Menu</a>
