--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -67,7 +67,7 @@
         <div class="row">
             <!-- SIDE BAR-->
             <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse" >
-                <div class="position-sticky pt-3">
+                <div id="sidebarItems" class="position-sticky pt-3">
                     <ul class="nav flex-column">
                         <li class="nav-item">
                             <div id="title"></div>
@@ -114,7 +114,6 @@
             </nav>
             <!-- Graph area -->
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-                <br>
                 <div id="time_series"></div>
                 <div class="slidecontainer">
                     <input class="slidecontainer" id="time-select" type="range" class="slider" id="myRange" step="10000">
