--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -63,65 +63,62 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
 
-    <div class="container-fluid" >
-        <div class="row">
-            <!-- SIDE BAR-->
-            <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse" >
-                <div id="sidebarItems" class="position-sticky pt-3">
-                    <ul class="nav flex-column">
-                        <li class="nav-item">
-                            <div id="title"></div>
-                        </li>
-                        <li class="nav-item">
-                            <!-- SELECT EEG FILE -->
-                            <button class="btn btn-sm btn-outline-secondary" onclick="openFileSelect();">Select File</button><br>
-                            <form method="POST" id="file_form" action="/upload_eeg" style=" display: none" enctype="multipart/form-data">
-                                <div class="form-group">
-                                    <div class="custom-file">
-                                        <input type="file" class="custom-file-input" id="eeg_file" name="eeg_file" accept=".rec, .edf"><br> <!-- 'eeg_file' to be called in flask-->
-                                    </div>
-                                </div>
-                                <input onclick="openFileSelect();" type="submit"/>
-                            </form>
-                        </li>
-                        <li>
-                            <!-- SELECT ELECTRODE-->
-                            <button class="btn btn-sm btn-outline-secondary" onclick="openElectrodeSelect();">Select Electrodes</button><br>
-                            <form method = "POST" id="electrode_form" action="electrode_select" style="display: none" enctype="multipart/form-data">
-                            </form>
-                        </li>
-                        <li>
-                            <!-- SELECT ANNOTATION FILE -->
-                            <button type="button" onclick="openAnnotationSelect();" class="btn btn-sm btn-outline-secondary">Open Annotation</button>
-                            <form method = "POST" id = "ann_file_form" name = "annotation" enctype = 'multipart/form-data' action="/upload_ann" style="display: none">
-                                <div class="form-group-ann">
-                                    <div class="custom-file-ann">
-                                        <input type="file" class="csv-file" id="ann_file" name="ann_file" accept=".csv"><br>
-                                    </div>
-                                </div>
-                                <input type="submit"/>
-                            </form>
-                        </li>
-                        <li>
-                            <!-- Close EEG FILE -->
-                            <form method = "POST" id="close_file" action="/delete" enctype="multipart/form-data">
-                                <input class="btn btn-sm btn-outline-secondary" type="submit" value="Close file">
-                                <br>
-                            </form>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-            <!-- Graph area -->
-            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-                <div id="time_series"></div>
-                <div class="slidecontainer">
-                    <span>
-                        <p id="sliderdisplay"></p>
-                        <input class="slidecontainer" id="time-select" type="range" class="slider" id="myRange" step="1000">
-                    </span>
-                </div>
-            </main>
+    <!-- SIDE BAR-->
+    <div id="sidebarMenu">
+    <nav >
+        <div id="sidebarItems">
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <div id="title"></div>
+                </li>
+                <li class="nav-item">
+                    <!-- SELECT EEG FILE -->
+                    <button class="btn btn-sm btn-outline-secondary" onclick="openFileSelect();">Select File</button><br>
+                    <form method="POST" id="file_form" action="/upload_eeg" style=" display: none" enctype="multipart/form-data">
+                        <div class="form-group">
+                            <div class="custom-file">
+                                <input type="file" class="custom-file-input" id="eeg_file" name="eeg_file" accept=".rec, .edf"><br> <!-- 'eeg_file' to be called in flask-->
+                            </div>
+                        </div>
+                        <input onclick="openFileSelect();" type="submit"/>
+                    </form>
+                </li>
+                <li>
+                    <!-- SELECT ELECTRODE-->
+                    <button class="btn btn-sm btn-outline-secondary" onclick="openElectrodeSelect();">Select Electrodes</button><br>
+                    <form method = "POST" id="electrode_form" action="electrode_select" style="display: none" enctype="multipart/form-data"></form>
+                </li>
+                <li>
+                    <!-- SELECT ANNOTATION FILE -->
+                    <button type="button" onclick="openAnnotationSelect();" class="btn btn-sm btn-outline-secondary">Open Annotation</button>
+                    <form method = "POST" id = "ann_file_form" name = "annotation" enctype = 'multipart/form-data' action="/upload_ann" style="display: none">
+                        <div class="form-group-ann">
+                            <div class="custom-file-ann">
+                                <input type="file" class="csv-file" id="ann_file" name="ann_file" accept=".csv"><br>
+                            </div>
+                        </div>
+                        <input type="submit"/>
+                    </form>
+                </li>
+                <li>
+                    <!-- Close EEG FILE -->
+                    <form method = "POST" id="close_file" action="/delete" enctype="multipart/form-data">
+                        <input class="btn btn-sm btn-outline-secondary" type="submit" value="Close file">
+                        <br>
+                    </form>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    </div>
+    <!-- Graph area -->
+    <div id="display-area">
+        <div id="time_series"></div>
+        <div class="slidecontainer">
+            <span>
+                <p id="sliderdisplay"></p>
+                <input class="slidecontainer" id="time-select" type="range" class="slider" id="myRange" step="1000">
+            </span>
         </div>
     </div>
 </body>
