--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -90,13 +90,19 @@
                         <input onclick="openFileSelect();" type="submit"/>
                     </form>
                 </li>
+                <!-- SELECT ELECTRODE-->
                 <li>
-                    <!-- SELECT ELECTRODE-->
                     <button class="btn btn-sm btn-outline-secondary" onclick="openElectrodeSelect();">Select Electrodes</button><br>
                     <form method = "POST" id="electrode_form" action="electrode_select" style="display: none" enctype="multipart/form-data"></form>
                 </li>
+                <br>
                 <li>
-                    <!-- SELECT ANNOTATION FILE -->
+                <!-- RUN MODEL -->
+                <li>
+                    <button id="model-button" class="btn btn-sm btn-outline-secondary" onclick="startModel();">Initiate Model</button><br>
+                    <a id="model-load"></a>
+                </li>
+                <!-- SELECT ANNOTATION FILE -->
                     <button type="button" onclick="openAnnotationSelect();" class="btn btn-sm btn-outline-secondary">Open Annotation</button>
 
                     <form method = "POST" id = "ann_file_form" name = "annotation" enctype = 'multipart/form-data' action="/upload_ann" style="display: none">
@@ -108,10 +114,11 @@
                         <input type="submit"/>
                     </form>
                 </li>
+                <br>
                 <li>
                     <!-- Close EEG FILE -->
                     <form method = "POST" id="close_file" action="/delete" enctype="multipart/form-data">
-                        <input class="btn btn-sm btn-outline-secondary" type="submit" value="Close file">
+                        <input class="btn btn-sm btn-outline-secondary" type="submit" value="Close">
                         <br>
                     </form>
                 </li>
