--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -19,7 +19,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src = "https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
 
+
     <link href="../static/index_style.css" rel="stylesheet">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <style>
@@ -37,55 +39,121 @@
             }
         }
     </style>
+
+
+    <style>
+.dropbtn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
+</style>
 </head>
 <body id="body" onload="loadIndexPage();">
     <!-- TOP HEADER BAR -->
     <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
         <!-- Title -->
-          <div>
-                 <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">IBRAIN · EEG Reviewer</a>
-                 <button type="button" class="btn btn-sm btn-outline-secondary" onclick="openDurationSelect();">Select Duration</button>
-                 <form method="POST" id="duration_form" action="/upload_duration" style=" display: none" enctype="multipart/form-data">
-                    <input type="number" id="duration" name="duration" min="1" max="60">
-                    <input onclick="openDurationSelect();" type="submit"/>
-                </form>
-                     <button class="btn btn-sm btn-outline-secondary dropdown-toggle" type="button" id = "ann_pop" data-bs-toggle="dropdown" aria-expanded="false">
-                        Montage List
-                      </button>
-                      </div>
-
+        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">IBRAIN · EEG Reviewer</a>
         <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
-
+            <span class="navbar-toggler-icon">
+                <a>Menu</a>
+            </span>
         </button>
         <!-- Tools (annotation, and time duration -->
         <div class="btn-toolbar mb-2 mb-md-0">
             <div class="btn-group me-2">
                 <!--Toggle display of buttons when annotations are uploaded is TODO -->
-                <!-- Display annotation-->
-                <button type="button" class="btn btn-sm btn-outline-secondary" onclick="toggleAnnotate();labelsList();">Annotate</button>
+                <button class="btn btn-sm btn-outline-secondary" onclick="listAnnotations();" type="button" id = "ann_pop" aria-expanded="false">Annotations</button>
+                <!-- Select time duration-->
+                <div class="dropdown">
+  <button class="btn btn-sm btn-outline-secondary">Annotations Tools</button>
+  <div class="dropdown-content">
+
+        <div>
+                    <h2 class="btn btn-sm btn-outline-secondary">Duration</h2>
+                    <select class="form-select form-select-sm" type="number" id="duration-input" name="duration">
+                        <option value="1">1 second</option>
+                        <option value="5">5 seconds</option>
+                        <option value="10">10 seconds</option>
+                        <option value="30">30 seconds</option>
+                        <option value="60">60 seconds</option>
+                    </select>
+              <h3 class="btn btn-sm btn-outline-secondary">Onset</h3>
+                    <select class="form-select form-select-sm" type="number" id="filter-input" name="filter-input">
+                        <option value="716">716 </option>
+                        <option value="744">744 </option>
+                        <option value="751">751 </option>
+                        <option value="790">790 </option>
+
+                    </select>
+
+             <h4 class="btn btn-sm btn-outline-secondary">Import Annotation</h4>
+                    <select class="form-select form-select-sm" type="number" id="annotation-input" name="annotation-input">
+                        <option value="1000">E1_E6_seizure1</option>
+                        <option value="500">E1_E6_seizure2</option>
+                        <option value="250">E1_E6_seizure3</option>
+                        <option value="100">E1_E6_seizure5</option>
+
+                    </select>
+             <h5 class="btn btn-sm btn-outline-secondary">Check EDF</h5>
+            <select class="form-select form-select-sm" type="number" id="edf-check" name="edf-check">
+            </select>
+             <h6 class="btn btn-sm btn-outline-secondary">Remove Duplicates in Annotations</h6>
+            <select class="form-select form-select-sm" type="number" id="remove-duplicates" name="remove-duplicates">
+            </select>
+
+
+               </div>
+<!--  <a href="#">Link 1</a>-->
+<!--  <a href="#">Link 2</a>-->
+<!--  <a href="#">Link 3</a>-->
+  </div>
+</div>
+
                 <div>
-
-
-                      <ul class="dropdown-menu" id="ann_list">
-                        <!-- Populate with labels -->
-                      </ul>
+<!--                    <h2 class="btn btn-sm btn-outline-secondary">Filter</h2>-->
+<!--                    <select class="form-select form-select-sm" type="number" id="filter-input" name="filter-input">-->
+<!--                        <option value="1000">1000 HZ</option>-->
+<!--                        <option value="500">500 HZ</option>-->
+<!--                        <option value="250">250 HZ</option>-->
+<!--                        <option value="100">100 HZ</option>-->
+<!--                    </select>-->
                 </div>
-
-<!--                Interface Setup for Annotations-->
-<form action="/action_page.php" class="btn btn-sm btn-outline-secondary">
-<div>
-     <label for="city">Annotate:</label>
-    <select name="city" id="city" onload = "listAnnotations();">
-        <option value = "Annotation file information">Annotation Interface</option>
-        <option value="sydney">Onset</option>
-        <option value="melbourne">Duration</option>
-        <option value="cromwell">Annotation</option>
-    </select>
-
-  <input type="text" id="fname" name="fname"><br><br>
-  <input onClick = "createAnnotationElementFrom;"type="submit" value="Submit">
-
-
+            </div>
         </div>
     </header>
 
@@ -94,7 +162,7 @@
 
     <!-- SIDE BAR-->
     <div id="sidebarMenu">
-    <nav >
+    <nav>
         <div id="sidebarItems">
             <ul class="nav flex-column">
                 <li>
@@ -112,13 +180,22 @@
                         <input onclick="openFileSelect();" type="submit"/>
                     </form>
                 </li>
+                <!-- SELECT ELECTRODE-->
                 <li>
-                    <!-- SELECT ELECTRODE-->
                     <button class="btn btn-sm btn-outline-secondary" onclick="openElectrodeSelect();">Select Electrodes</button><br>
                     <form method = "POST" id="electrode_form" action="electrode_select" style="display: none" enctype="multipart/form-data"></form>
                 </li>
+                <br>
                 <li>
-                    <!-- SELECT ANNOTATION FILE -->
+                <!-- RUN MODEL -->
+                <li>
+                    <button id="model-button" class="btn btn-sm btn-outline-secondary" onclick="startModel();">Initiate Model</button><br>
+                    <select class="form-select form-select-sm" type="number" id="reference-input" name="reference-input">
+                        <option id="ref-default" selected>None Selected</option>
+                    </select>
+                    <a id="model-load"></a>
+                </li>
+                <!-- SELECT ANNOTATION FILE -->
                     <button type="button" onclick="openAnnotationSelect();" class="btn btn-sm btn-outline-secondary">Open Annotation</button>
 
                     <form method = "POST" id = "ann_file_form" name = "annotation" enctype = 'multipart/form-data' action="/upload_ann" style="display: none">
@@ -130,10 +207,11 @@
                         <input type="submit"/>
                     </form>
                 </li>
+                <br>
                 <li>
                     <!-- Close EEG FILE -->
                     <form method = "POST" id="close_file" action="/delete" enctype="multipart/form-data">
-                        <input class="btn btn-sm btn-outline-secondary" type="submit" value="Close file">
+                        <input class="btn btn-sm btn-outline-secondary" type="submit" value="Close">
                         <br>
                     </form>
                 </li>
@@ -141,8 +219,17 @@
         </div>
     </nav>
     </div>
+    <div class="annotation-menu">
+        <nav id="annotation-items"></nav>
+    </div>
     <!-- Graph area -->
     <div id="display-area">
+        <select id="color-select">
+            <option value="#51A1E8">Blue</option>
+            <option value="#000000">Black</option>
+            <option value="#ff0000">Red</option>
+            <option value="#ffff00">Yellow</option>
+        </select>
         <div id="time_series"></div>
         <footer class="slidecontainer">
             <p class="slidecontainer" id="sliderdisplay"></p>
