--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -75,6 +75,12 @@
                         <option value="100">100 HZ</option>
                     </select>
                 </div>
+                <div>
+                    <h2 class="btn btn-sm btn-outline-secondary">Amplitude</h2>
+                    <select class="form-select form-select-sm" type="number" id="amplitude-input" name="filter-input" disabled>
+                        <option id="amplitude-display" value="">200/-200</option>
+                    </select>
+                </div>
             </div>
         </div>
     </header>
@@ -90,8 +96,8 @@
                 <li>
                     <div id="title"></div>
                 </li>
+                 <!-- SELECT EEG FILE -->
                 <li class="nav-item">
-                    <!-- SELECT EEG FILE -->
                     <button class="btn btn-sm btn-outline-secondary" onclick="openFileSelect();">Select File</button><br>
                     <form method="POST" id="file_form" action="/upload_eeg" style=" display: none" enctype="multipart/form-data">
                         <div class="form-group">
@@ -108,14 +114,14 @@
                     <form method = "POST" id="electrode_form" action="electrode_select" style="display: none" enctype="multipart/form-data"></form>
                 </li>
                 <br>
-                <li>
                 <!-- RUN MODEL -->
-                <li>
                     <button id="model-button" class="btn btn-sm btn-outline-secondary" onclick="startModel();">Initiate Model</button><br>
                     <select class="form-select form-select-sm" type="number" id="reference-input" name="reference-input">
                         <option id="ref-default" selected>None Selected</option>
                     </select>
-                    <a id="model-load"></a>
+                    <div class="progress" id="ml-progress">
+                      <div id="ml-progress-bar" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
+                    </div>
                 </li>
                 <!-- SELECT ANNOTATION FILE -->
                     <button type="button" onclick="openAnnotationSelect();" class="btn btn-sm btn-outline-secondary">Open Annotation</button>
