--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -45,42 +45,41 @@
     <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
         <!-- Title -->
         <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">IBRAIN · EEG Reviewer</a>
-        <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon">
-                <a>Menu</a>
-            </span>
-        </button>
-        <!-- Tools (annotation, and time duration -->
         <div class="btn-toolbar mb-2 mb-md-0">
+        <div class="btn-group me-2">
+            <!-- Select time duration-->
+            <div>
+                <p>Duration</p>
+                <select class="form-select form-select-sm" type="number" id="duration-input" name="duration">
+                    <option value="1">1 second</option>
+                    <option value="5">5 seconds</option>
+                    <option value="10">10 seconds</option>
+                    <option value="30">30 seconds</option>
+                    <option value="60">60 seconds</option>
+                </select>
+           </div>
+            <div>
+                <p>Filter</p>
+                <select class="form-select form-select-sm" type="number" id="filter-input" name="filter-input">
+                    <option value="1000">1000 HZ</option>
+                    <option value="500">500 HZ</option>
+                    <option value="250">250 HZ</option>
+                    <option value="100">100 HZ</option>
+                </select>
+            </div>
+            <div>
+                <p>Amplitude</p>
+                <select class="form-select form-select-sm" type="number" id="amplitude-input" name="filter-input" disabled>
+                    <option id="amplitude-display" value="">200/-200</option>
+                </select>
+            </div>
+        </div>
+        <!-- Tools (annotation, and time duration -->
+
             <div class="btn-group me-2">
                 <!--Toggle display of buttons when annotations are uploaded is TODO -->
-                <button class="btn btn-sm btn-outline-secondary" onclick="listAnnotations();" type="button" id = "ann_pop" aria-expanded="false">Annotations</button>
-                <!-- Select time duration-->
-                <div>
-                    <h2 class="btn btn-sm btn-outline-secondary">Duration</h2>
-                    <select class="form-select form-select-sm" type="number" id="duration-input" name="duration">
-                        <option value="1">1 second</option>
-                        <option value="5">5 seconds</option>
-                        <option value="10">10 seconds</option>
-                        <option value="30">30 seconds</option>
-                        <option value="60">60 seconds</option>
-                    </select>
-               </div>
-                <div>
-                    <h2 class="btn btn-sm btn-outline-secondary">Filter</h2>
-                    <select class="form-select form-select-sm" type="number" id="filter-input" name="filter-input">
-                        <option value="1000">1000 HZ</option>
-                        <option value="500">500 HZ</option>
-                        <option value="250">250 HZ</option>
-                        <option value="100">100 HZ</option>
-                    </select>
-                </div>
-                <div>
-                    <h2 class="btn btn-sm btn-outline-secondary">Amplitude</h2>
-                    <select class="form-select form-select-sm" type="number" id="amplitude-input" name="filter-input" disabled>
-                        <option id="amplitude-display" value="">200/-200</option>
-                    </select>
-                </div>
+                    <br>
+                    <button class="btn btn-sm btn-outline-secondary" onclick="listAnnotations();" type="button" id = "ann_pop" aria-expanded="false">Annotations</button>
             </div>
         </div>
     </header>
